added update | delete for vehicle, driver, terminal
