# .history/src/domain/controller/vehicle.controller_20210621135321.ts
@@ -11,32 +11,27 @@ export class VehicleController extends Controller {
 
     @Get('/all')
     public async getAll(
-        @Query() assembly?: string,
-        @Query() limit?: number,
+        @Query() assembly?: string, 
+        @Query() limit?: number, 
         @Query() fromDate?: Date,
         @Query() toDate?: Date,
-        @Res() notFoundResponse?: TsoaResponse<404, IErrorResponse>,
-    ): Promise<IApiResponse> {
+        @Res() notFoundResponse?: TsoaResponse<404, IErrorResponse>): Promise<IApiResponse> {
         logging.info(NAMESPACE, 'All vehicles');
-        try {
 
-            let extraQuery = {};
-            if (assembly != null) extraQuery = { municipal_assembly: assembly };
-
-            if (fromDate != null && toDate != null) {
-                extraQuery['createdAt'] = {
-                    $gte: fromDate,
-                    $lte: toDate
-                }
+        let extraQuery = {};
+        if(assembly != null) extraQuery = { municipal_assembly: assembly };
+        
+        if (fromDate != null && toDate != null) {
+            extraQuery['createdAt'] = {
+                $gte: fromDate,
+                $lte: toDate
             }
-
-            let vehicles: any[] = await VehicleService.list(limit, 1, extraQuery);
-            if (!vehicles || vehicles.length == 0) return notFoundResponse(404, { message: "No record found" });
-
-            return { 'message': "Fetched", data: vehicles };
-        } catch(e){
-            logging.error(NAMESPACE, e);
         }
+
+        let vehicles: any[] = await VehicleService.list(limit, 1, extraQuery);
+        if (!vehicles || vehicles.length == 0) notFoundResponse(404, { message: "No record found" });
+
+        return { 'message': "Fetched", data: vehicles };
     }
 
     @Response<IErrorResponse>(422, "Validation Failed")
